apply plugin: 'java'
apply plugin: 'eclipse'

version = '1.0.0'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile('com.sparkjava:spark-core:2.6.0')
    compile('com.sparkjava:spark-template-handlebars:2.5.5')
    compile('ch.qos.logback:logback-classic:1.2.3')
    testCompile('junit:junit:4.12')
    testCompile('org.assertj:assertj-core:3.9.0')
    compile('org.mockito:mockito-all:1.10.19')
}